css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  font-size: 100%;
  font-family: sans-serif;
  color: white;
}
img {
  max-width: 100%;
}

h1 {
  text-align: center;
}
body {
  background-color: black;
}

.container {
  width: 80%;
  margin: 1em auto;
  padding: 1em 0;
}
.container > p {
  text-align: center;
  width: 70%;
  text-align: center;
  margin: 0.8em auto 1em;
}
.row {
  padding: 1em;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  gap: 1em;
  background: linear-gradient(rgba(96, 22, 22, 0.235), rgb(85, 10, 10));
}

.card {
  width: calc(100% / 3 - (2em / 3));
  text-align: center;
  margin: 1em 0;
  font-weight: 100;
}

.card img {
  border-radius: 10px;
  margin-bottom: 0.5em;
}

.card p:nth-child(2) {
  font-weight: bold;
}

.join {
  margin: 0em auto 2em;
  padding: 2em 1em;
  display: flex;
  border-radius: 0px 0px 10px 10px;
  flex-direction: column;
  text-align: center;
  gap: 1em;
  background: linear-gradient(rgb(85, 10, 10), rgba(96, 22, 22, 0.235));
}

.form {
  padding: 1em 2em;
}
.form-container {
  display: flex;
  justify-content: space-between;
}
.form input {
  border-radius: 10px;
  border: none;
  background-color: black;
  color: white;
  padding: 0.5em;
  width: 100%;
  margin-top: 0.5em;
}
.form button {
  background-color: rgba(0, 0, 0, 0.141);
  color: white;
  border: 1px solid white;
  padding: 1em;
  border-radius: 30px;
  font-size: 1rem;
  cursor: pointer;
  margin-top: 2em;
}

